--- a/src/jade/template.jade
+++ b/src/jade/template.jade
@@ -1,4 +1,3 @@
-form
-	span Jade
-	input(type="file" file-model="file")
-	button(ng-click="compile()") Compile
+h2 Jade
+input(type="file" file-model="file")
+button(progress-button="compile()") Compile
