--- a/src/stylus/template.jade
+++ b/src/stylus/template.jade
@@ -1,4 +1,3 @@
-form
-	span Stylus
-	input(type="file" file-model="file")
-	button(ng-click="compile()") Compile
+h2 Stylus
+input(type="file" file-model="file")
+button(progress-button="compile()") Compile
