Add files to store.

--- a/src/assets/style/button.styl
+++ b/src/assets/style/button.styl
@@ -2,7 +2,7 @@ btn(textColour, bgColour)
   background bgColour
   color textColour
 
-a, button
+button
   border none
   border-radius 10px / 50%
   cursor pointer
