Improve buttons styling.

--- a/src/assets/style/header.styl
+++ b/src/assets/style/header.styl
@@ -1,7 +1,7 @@
 headerHeight = 60px
 
 header
-  background rgb(71, 71, 71)
+  background colHeader
   color rgb(137, 137, 137)
   height headerHeight
   line-height headerHeight
