--- a/src/assets/style/vars.styl
+++ b/src/assets/style/vars.styl
@@ -1,3 +1,5 @@
+colHeader = rgb(71, 71, 71)
+
 grayDark = #333333 // 51
 grayLight = #9b9b9b // 155
 grayLighter = #aeaeae // 174
@@ -7,3 +9,10 @@ colStylus = #f6634d
 colJade = #fcb837
 
 internalPadding = 15px
+
+btn(textColour, bgColour)
+  button
+    background bgColour
+    color textColour
+  .status
+    border-color bgColour
