--- a/src/assets/style/langs.styl
+++ b/src/assets/style/langs.styl
@@ -3,15 +3,11 @@ rowHeight = 40px
 lang(col)
   .title
     background col
-
-    button
-      btn(col, white)
+    btn(col, white)
 
   .row.late .extra
     color col
-
-    .status
-      border-color col
+    btn(white, col)
 
 .langs
   display flex
@@ -44,7 +40,10 @@ lang(col)
         background grayLightest
 
       .extra
+        align-items center
         color grayLighter
+        display flex
+        flex-flow row nowrap
         font-size 1.2rem
         letter-spacing 0.02em
         transition 1s
