--- a/src/assets/style.styl
+++ b/src/assets/style.styl
@@ -18,4 +18,5 @@ body
 @import 'style/header.styl'
 @import 'style/dropbox.styl'
 @import 'style/langs.styl'
+@import 'style/footer.styl'
 @import 'style/status.styl'
