Refactor Status icon.

--- a/src/assets/style/button.styl
+++ b/src/assets/style/button.styl
@@ -9,3 +9,8 @@ button
   padding 2px 6px
   text-decoration none
   text-transform lowercase
+
+.compile-button
+  align-items center
+  display flex
+  flex-flow row nowrap
