--- a/src/assets/style/status.styl
+++ b/src/assets/style/status.styl
@@ -11,6 +11,11 @@ borderSize = 2px
   vertical-align middle
   width size
 
-  .late &, &.late
+.status-block
+  align-items center
+  display flex
+  flex-flow row nowrap
+
+  &.late .status
     border-radius 0%
     transform rotate(-270deg)
