--- a/src/assets/style/vars.styl
+++ b/src/assets/style/vars.styl
@@ -8,6 +8,8 @@ grayLightest = #efefef // 239
 colStylus = #f6634d
 colJade = #fcb837
 
+green = #27ae60
+
 internalPadding = 15px
 
 btn(textColour, bgColour)
