--- a/src/assets/style.styl
+++ b/src/assets/style.styl
@@ -5,11 +5,12 @@ html
   font-size 62.7%
 
 body
+  cursor default
   font-family 'Karla', sans-serif
   font-size 1.4rem
   letter-spacing 0.05em
   margin 0
-  user-select none
+  -webkit-user-select: none;
 
 *
   box-sizing border-box
