Group files per type.

--- a/src/assets/style/langs.styl
+++ b/src/assets/style/langs.styl
@@ -19,11 +19,14 @@ lang(col)
       color grayDark
       display flex
       flex-flow row nowrap
-      font-size 1.2rem
+      font-size 1.3rem
       height rowHeight
       justify-content space-between
       line-height rowHeight
       padding 0 internalPadding
+
+      .path
+        color grayLight
 
       &.title
         color white
