--- a/src/assets/style/button.styl
+++ b/src/assets/style/button.styl
@@ -4,6 +4,7 @@ button
   border none
   border-radius 10px / 50%
   cursor pointer
+  font-size 1.2rem
   font-weight bold
   outline none
   padding 2px 6px
