Add compilation through middleware.

--- a/src/assets/style/langs.styl
+++ b/src/assets/style/langs.styl
@@ -5,7 +5,7 @@ lang(col)
     background col
     btn(col, white)
 
-  .row .extra .late
+  .row:not(.title) .extra .late
     color col
     btn(white, col)
 
