Update jade->pug and stylus.

--- a/src/assets/style/vars.styl
+++ b/src/assets/style/vars.styl
@@ -6,7 +6,7 @@ grayLighter = #aeaeae // 174
 grayLightest = #efefef // 239
 
 colStylus = #f6634d
-colJade = #fcb837
+colPug = #fcb837
 
 green = #27ae60
 
