--- a/docs/index.pug
+++ b/docs/index.pug
@@ -4,10 +4,33 @@ html
 
   head
 
-    title Metamorphe
+    title Metamorph
     link(rel="stylesheet" type="text/css" href="./style.css")
     meta(name="viewport" content="initial-scale=1, maximum-scale=1")
 
   body
   
-    // Add content here
+    main
+    
+      img.logo(src="./assets/logo.png" alt="Logo")
+      
+      h1 Metamorph
+      
+      h2 Transform Pug and Stylus files into Html and Css files without opening your terminal.
+      
+      ul
+        li From Pug to Html
+        li From Stylus to Css
+        
+      a.button(href="") Download Metamorph for Mac
+      
+      a.link(href="") View on GitHub
+      
+      p Made by Nathan Gaberel and Charlotte Breton Schreiner
+        
+    
+    aside
+    
+      img.screenshot(src="./assets/screenshot.png" alt="Screenshot of Metamorph in action")
+
+    
