Add content and style.

--- a/docs/index.pug
+++ b/docs/index.pug
@@ -12,25 +12,24 @@ html
   
     main
     
-      img.logo(src="./assets/logo.png" alt="Logo")
-      
-      h1 Metamorph
-      
-      h2 Transform Pug and Stylus files into Html and Css files without opening your terminal.
-      
-      ul
-        li From Pug to Html
-        li From Stylus to Css
+      section.content
         
-      a.button(href="") Download Metamorph for Mac
-      
-      a.link(href="") View on GitHub
-      
-      p Made by Nathan Gaberel and Charlotte Breton Schreiner
+        img.logo(src="./assets/logo.png" alt="Logo")
         
+        h1 Metamorph
+        
+        h2 Transform Pug and Stylus files into Html and Css files without opening your terminal.
+        
+        ul
+          li From Pug to Html
+          li From Stylus to Css
+          
+        a.button(href="") Download Metamorph for Mac
+        
+        a.link(href="") View on GitHub
+        
+        p.credit Made by #[a.link(href="https://gnab.fr/") Nathan Gaberel] and #[a.link(href="https://charlottebretonsch.com/") Charlotte Breton Schreiner]
+        
+      section.preview
     
-    aside
-    
-      img.screenshot(src="./assets/screenshot.png" alt="Screenshot of Metamorph in action")
-
-    
+        img.screenshot(src="./assets/screenshot.png" alt="Screenshot of Metamorph in action")
