--- a/docs/style.styl
+++ b/docs/style.styl
@@ -104,7 +104,6 @@ a.link
 
 img.logo
   height grid-size*8
-  margin 0 0 grid-size*10 0
 
 img.screenshot
   width 100%
@@ -123,6 +122,9 @@ main
   section.content
     width grid-size*89
     margin-right grid-size*28
+    display flex
+    flex-direction column
+    align-items flex-start
 
   section.preview
     width grid-size*120
