--- a/docs/style.styl
+++ b/docs/style.styl
@@ -54,9 +54,9 @@ a
 // Text
 
 h1
-  margin grid-size*10 0 grid-size*3 0
   font-size grid-size*14
   line-height grid-size*17.5
+  margin grid-size*10 0 grid-size*3 0
 
 h2
   font-size grid-size*6
@@ -90,11 +90,17 @@ a.button
   color color-light
   background color-dark
   padding grid-size*4 grid-size*6
-  margin grid-size*10 0 grid-size*4 0
+  margin grid-size*10 0 grid-size*5 0
+
+  &:hover
+    background darken(color-dark, 8)
 
 a.link
   display inline-block
   color inherit
+
+  &:hover
+    color darken(color-dark, 8)
 
 
 
@@ -111,25 +117,64 @@ img.screenshot
 
 // Structure
 
-main
+body
   width 100%
   height 100%
   display flex
   justify-content center
   align-items center
 
-  section.content
+  main
     width grid-size*89
     margin-right grid-size*28
     display flex
     flex-direction column
     align-items flex-start
 
-  section.preview
+  aside
     width grid-size*120
 
 p.credit
   color color-mid
+
+
+
+
+// Responsive
+
+@media screen and (max-width: 1172px), (max-height: 890px)
+
+  html
+    font-size 56%
+
+    main
+      margin-right grid-size*18
+
+
+@media screen and (max-width: 941px), (max-height: 725px)
+
+  body
+    height auto
+    flex-direction column
+    justify-content flex-start
+
+    main,
+    aside
+      width 480px
+
+    main
+      margin grid-size*16 0 grid-size*6 0
+
+    aside
+      margin grid-size*6 0 grid-size*16 0
+
+@media screen and (max-width: 560px)
+
+  body
+    main,
+    aside
+      width 100%
+      padding 0 grid-size*10
 
 
 
