Replace image with video.

--- a/docs/index.pug
+++ b/docs/index.pug
@@ -23,12 +23,15 @@ html
         li From Pug to Html
         li From Stylus to Css
         
-      a.button(href="") Download Metamorph for Mac
+      a.button(href="https://github.com/n6g7/stylay") Download Metamorph for Mac
       
-      a.link(href="") View on GitHub
+      a.link(href="https://github.com/n6g7/stylay") View on GitHub
       
       p.credit Made by #[a.link(href="https://gnab.fr/") Nathan Gaberel] and #[a.link(href="https://charlottebretonsch.com/") Charlotte Breton Schreiner]
       
     aside
-  
-      img.screenshot(src="./assets/screenshot.png" alt="Screenshot of Metamorph in action")
+      
+      video(width="auto" height="auto" loop="true" autoplay="autoplay")
+        source(src="./assets/metamorph.mp4", type="video/mp4")
+        source(src="movie.ogg", type="video/ogg")
+        |Your browser does not support the video tag.
