--- a/docs/style.styl
+++ b/docs/style.styl
@@ -61,6 +61,7 @@ h1
 h2
   font-size grid-size*6
   line-height grid-size*7.5
+  margin-bottom grid-size*3
 
 p, a, li
   font-size grid-size*4
@@ -74,7 +75,7 @@ a
 
 li
   padding-left grid-size*5
-  margin grid-size*3 0 0 0
+  margin grid-size*2 0 0 0
   list-style none
   background-image url("./assets/bullet.png")
   background-repeat no-repeat
