--- a/docs/style.css
+++ b/docs/style.css
@@ -37,6 +37,7 @@ h1 {
 h2 {
   font-size: 2.4rem;
   line-height: 3rem;
+  margin-bottom: 1.2rem;
 }
 p,
 a,
@@ -52,7 +53,7 @@ a {
 }
 li {
   padding-left: 2rem;
-  margin: 1.2rem 0 0 0;
+  margin: 0.8rem 0 0 0;
   list-style: none;
   background-image: url("./assets/bullet.png");
   background-repeat: no-repeat;
