--- a/docs/index.pug
+++ b/docs/index.pug
@@ -32,6 +32,7 @@ html
     aside
       
       video(width="auto" height="auto" loop="true" autoplay="autoplay")
+        // MP4 for Safari, IE9, iPhone, iPad, Android, and Windows Phone 7
         source(src="./assets/metamorph.mp4", type="video/mp4")
         // WebM/VP8 for Firefox4, Opera, and Chrome
         source(src="./assets/metamorph.webm", type="video/webm")
