--- a/docs/index.pug
+++ b/docs/index.pug
@@ -31,7 +31,7 @@ html
       
     aside
       
-      video(width="auto" height="auto" loop="true" autoplay="autoplay")
+      video(width="auto" height="auto" loop="true" autoplay="autoplay" poster="./assets/screenshot.png" controls preload="none")
         // MP4 for Safari, IE9, iPhone, iPad, Android, and Windows Phone 7
         source(src="./assets/metamorph.mp4", type="video/mp4")
         // WebM/VP8 for Firefox4, Opera, and Chrome
