--- a/docs/index.pug
+++ b/docs/index.pug
@@ -6,6 +6,7 @@ html
 
     title Metamorph
     link(rel="stylesheet" type="text/css" href="./style.css")
+    link(rel="shortcut icon" type="image/png" href="./assets/favicon.png")
     meta(name="viewport" content="initial-scale=1, maximum-scale=1")
 
   body
