Add release link.

--- a/docs/index.pug
+++ b/docs/index.pug
@@ -24,7 +24,7 @@ html
         li From Pug to Html
         li From Stylus to Css
         
-      a.button(href="https://github.com/n6g7/stylay") Download Metamorph for Mac
+      a.button(href="https://github.com/n6g7/stylay/releases/latest") Download Metamorph for Mac
       
       a.link(href="https://github.com/n6g7/stylay") View on GitHub
       
