--- a/docs/index.pug
+++ b/docs/index.pug
@@ -10,28 +10,28 @@ html
     meta(name="viewport" content="initial-scale=1, maximum-scale=1")
 
   body
-  
-    
+
+
     main
-      
+
       img.logo(src="./assets/logo.png" alt="Logo")
-      
+
       h1 Metamorph
-      
+
       h2 Transform Pug and Stylus files into Html and Css files without opening your terminal.
-      
+
       ul
         li From Pug to Html
         li From Stylus to Css
-        
-      a.button(href="https://github.com/n6g7/stylay/releases/latest") Download Metamorph for Mac
-      
-      a.link(href="https://github.com/n6g7/stylay") View on GitHub
-      
+
+      a.button(href="https://github.com/n6g7/metamorph/releases/latest") Download Metamorph for Mac
+
+      a.link(href="https://github.com/n6g7/metamorph") View on GitHub
+
       p.credit Made by #[a.link(href="https://gnab.fr/") Nathan Gaberel] and #[a.link(href="https://charlottebretonsch.com/") Charlotte Breton Schreiner]
-      
+
     aside
-      
+
       video(width="auto" height="auto" loop="true" autoplay="autoplay" poster="./assets/screenshot.png" controls preload="none")
         // MP4 for Safari, IE9, iPhone, iPad, Android, and Windows Phone 7
         source(src="./assets/metamorph.mp4", type="video/mp4")
